# C_tutorial

./: Arrays1.c  Average.c  BasicCalculatorApp.c  CMakeLists.txt  Com_Const.c  DataTypes.c  Pointers.txt  PrintfBasics.c  Prompt_User.c  README.md  WorkWithNums.c
Arrays/: Arrays2.c  ArraysPointers.c
Exercices/: Date.c  Date.h  Exercice1.c  Exercice10.c  Exercice11.c  Exercice12.c  Exercice13.c  Exercice14.c  Exercice15.c  Exercice16.c  Exercice17.c  Exercice18.c  Exercice19.c  Exercice2.c  Exercice20.c  Exercice21.c  Exercice22.c  Exercice23.c  Exercice24.c  Exercice25.c  Exercice26.c  Exercice27.c  Exercice28.c  Exercice29.c  Exercice3.c  Exercice4.c  Exercice5.c  Exercice6.c  Exercice7.c  Exercice8.c  Exercice9.c  tempCodeRunnerFile.c
FilesInC/: ReadFromAText.c
Pointers/: Pointers1.c  Pointers2.c  Pointers3.c  PointersExp.c
Stacks/: Pile.c  Pile.h
Strings/: Strcat.c  Strcmp.c  Strcpy.c  Strings.c  Strings1.c  Strlen.c  Strncat.c  Strncmp.c  Strncpy.c  Strnlen.c
