cmake_minimum_required(VERSION 3.22)
project(C_tutorial C)

set(CMAKE_C_STANDARD 11)

add_executable(C_tutorial
        Arrays/Arrays1.c
        Arrays/Arrays2.c
        Arrays/ArraysPointers.c
        Exercices/Exercice1.c
        Exercices/Exercice10.c
        Exercices/Exercice11.c
        Exercices/Exercice12.c
        Exercices/Exercice13.c
        Exercices/Exercice14.c
        Exercices/Exercice15.c
        Exercices/Exercice2.c
        Exercices/Exercice3.c
        Exercices/Exercice4.c
        Exercices/Exercice5.c
        Exercices/Exercice6.c
        Exercices/Exercice7.c
        Exercices/Exercice8.c
        Exercices/Exercice9.c
        Pointers/Pointers1.c
        Pointers/Pointers2.c
        Pointers/Pointers3.c
        Pointers/PointersExp.c
        Average.c
        BasicCalculatorApp.c
        Com_Const.c
        DataTypes.c
        PrintfBasics.c
        Prompt_User.c
        WorkWithNums.c)
